# klyph

./: .dockerignore  .gitignore  Dockerfile  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  main.py  middleware.py  normalization.py  observability.py  registry.py  service.py  subsetter.py
deploy/: README.md
deploy/logrotate.d/: font-service
deploy/nginx/: klyph.conf.example
deploy/systemd/: font-service.service
fonts/: sources.json
scripts/: download_fonts.py  generate_brand_assets.ps1
static/: 403.html  404.html  500.html  components.html  index.html  licenses.html  privacy.html  robots.txt  site.css  site.js  site.webmanifest  sitemap.xml  terms.html  webfont-sdk.js
tests/: test_api.py  test_config.py  test_normalization.py  test_service.py  test_workflow.py
